Added btn to top, minor html/scss/js changes.

--- a/src/pages/about/about.html
+++ b/src/pages/about/about.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Dmitry Voskoboev">
   <meta name="description" content="Design bureau renders excluesive full cycle design services">
-  <meta name="keywords"
-    content="design, exterior, interior, bureau, firm, exterior, interior, architecture, furniture, buildings">
+  <meta name="keywords" content="design, exterior, interior, bureau, firm, architecture, furniture, buildings">
   <!-- og -->
   <meta property="og:url" content="https://benhome.netlify.app/__/about/about.html">
   <meta property="og:type" content="website">
@@ -34,7 +33,7 @@
     <div class="header__upper">
       <button class="header__mobile-btn--open">
       </button>
-      <a class="header__logo" href="/">
+      <a class="header__logo" href="/" aria-label="Header logo">
         <img class="header__logo-benhome" src="../../images/general.imgs/logo-black.png" alt="logo-white">
       </a>
       <nav class="header__nav">
@@ -88,10 +87,8 @@
       <div class="header__central-decor-el">
       </div>
     </div>
-    <!-- // ? -->
     <div class="header__lower">
     </div>
-    <!-- // ? -->
   </header>
   <section class="idea">
     <div class="idea__upper">
@@ -106,16 +103,14 @@
       </div>
       <div class="idea__upper-right">
         <div class="idea__video-container">
-
-          <video class="idea__video" src="../../videos/about/modern-house.mp4" poster="../../images/pages/about/poster.jpg">
-            Your browser can't play the video. Please, change browser.
+          <video class="idea__video" src="../../videos/about/modern-house.mp4"
+            poster="../../images/pages/about/poster.jpg">
+            Your browser doesn't support video player.
           </video>
-
           <div class="idea__play-btn">
             <div class="idea__poster-arrow">
             </div>
           </div>
-
         </div>
       </div>
     </div>
@@ -147,118 +142,121 @@
     </div>
   </section>
   <section class="services">
-    <div class="services__left">
-      <h3 class="services__title">
-        SERVICES
-      </h3>
-    </div>
-    <div class="services__right">
-      <ul class="services__list">
-        <li class="services__list-item">
-          <div class="services__list-item-upper">
-            <h4 class="services__list-item-title" tabindex="0">
-              ARCHITECTURE DESIGN
-            </h4>
-            <button class="services__list-item-btn services__list-item-btn--active">
-              <div class="services__list-item-btn-down-arrow services__list-item-btn-down-arrow--active">
-              </div>
-            </button>
-          </div>
-          <div class="services__list-item-lower services__list-item-lower--active">
-            <a href="#" class="services__list-item-link">
-              Explore
-            </a>
-            <p class="services__list-item-text">
-              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
-              1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are reproduced Рunk of
-            </p>
-          </div>
-        </li>
-        <li class="services__list-item">
-          <div class="services__list-item-upper">
-            <h4 class="services__list-item-title" tabindex="0">
-              PLANNING
-            </h4>
-            <button class="services__list-item-btn">
-              <div class="services__list-item-btn-down-arrow">
-
-              </div>
-            </button>
-          </div>
-          <div class="services__list-item-lower">
-            <a href="#" class="services__list-item-link">
-              Explore
-            </a>
-            <p class="services__list-item-text">
-              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
-              1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are reproduced Рunk of
-            </p>
-          </div>
-        </li>
-        <li class="services__list-item">
-          <div class="services__list-item-upper">
-            <h4 class="services__list-item-title" tabindex="0">
-              LANDSCAPE DESIGN
-            </h4>
-            <button class="services__list-item-btn">
-              <div class="services__list-item-btn-down-arrow">
-
-              </div>
-            </button>
-          </div>
-          <div class="services__list-item-lower">
-            <a href="#" class="services__list-item-link">
-              Explore
-            </a>
-            <p class="services__list-item-text">
-              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
-              1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are reproduced Рunk of
-            </p>
-          </div>
-        </li>
-        <li class="services__list-item">
-          <div class="services__list-item-upper">
-            <h4 class="services__list-item-title" tabindex="0">
-              BRANDING
-            </h4>
-            <button class="services__list-item-btn">
-              <div class="services__list-item-btn-down-arrow">
-
-              </div>
-            </button>
-          </div>
-          <div class="services__list-item-lower">
-            <a href="#" class="services__list-item-link">
-              Explore
-            </a>
-            <p class="services__list-item-text">
-              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
-              1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are reproduced Рunk of
-            </p>
-          </div>
-        </li>
-        <li class="services__list-item">
-          <div class="services__list-item-upper">
-            <h4 class="services__list-item-title" tabindex="0">
-              STYLE
-            </h4>
-            <button class="services__list-item-btn">
-              <div class="services__list-item-btn-down-arrow">
-
-              </div>
-            </button>
-          </div>
-          <div class="services__list-item-lower">
-            <a href="#" class="services__list-item-link">
-              Explore
-            </a>
-            <p class="services__list-item-text">
-              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
-              1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are reproduced Рunk of
-            </p>
-          </div>
-        </li>
-      </ul>
+    <div class="services__wrapper">
+      <div class="services__left">
+        <h3 class="services__title">
+          Services
+        </h3>
+      </div>
+      <div class="services__right">
+        <ul class="services__list">
+          <li class="services__list-item">
+            <div class="services__list-item-upper">
+              <h4 class="services__list-item-title" tabindex="0">
+                Architecture design
+              </h4>
+              <button class="services__list-item-btn services__list-item-btn--active">
+                <div class="services__list-item-btn-down-arrow services__list-item-btn-down-arrow--active">
+                </div>
+              </button>
+            </div>
+            <div class="services__list-item-lower services__list-item-lower--active">
+              <a class="services__list-item-link" href="#">
+                Explore
+              </a>
+              <p class="services__list-item-text">
+                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+                Sections
+                1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are reproduced Рunk of
+              </p>
+            </div>
+          </li>
+          <li class="services__list-item">
+            <div class="services__list-item-upper">
+              <h4 class="services__list-item-title" tabindex="0">
+                Planning
+              </h4>
+              <button class="services__list-item-btn">
+                <div class="services__list-item-btn-down-arrow">
+                </div>
+              </button>
+            </div>
+            <div class="services__list-item-lower">
+              <a class="services__list-item-link" href="#">
+                Explore
+              </a>
+              <p class="services__list-item-text">
+                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+                Sections
+                1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are reproduced Рunk of
+              </p>
+            </div>
+          </li>
+          <li class="services__list-item">
+            <div class="services__list-item-upper">
+              <h4 class="services__list-item-title" tabindex="0">
+                Landscape design
+              </h4>
+              <button class="services__list-item-btn">
+                <div class="services__list-item-btn-down-arrow">
+                </div>
+              </button>
+            </div>
+            <div class="services__list-item-lower">
+              <a class="services__list-item-link" href="#">
+                Explore
+              </a>
+              <p class="services__list-item-text">
+                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+                Sections
+                1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are reproduced Рunk of
+              </p>
+            </div>
+          </li>
+          <li class="services__list-item">
+            <div class="services__list-item-upper">
+              <h4 class="services__list-item-title" tabindex="0">
+                Branding
+              </h4>
+              <button class="services__list-item-btn">
+                <div class="services__list-item-btn-down-arrow">
+                </div>
+              </button>
+            </div>
+            <div class="services__list-item-lower">
+              <a class="services__list-item-link" href="#">
+                Explore
+              </a>
+              <p class="services__list-item-text">
+                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+                Sections
+                1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are reproduced Рunk of
+              </p>
+            </div>
+          </li>
+          <li class="services__list-item">
+            <div class="services__list-item-upper">
+              <h4 class="services__list-item-title" tabindex="0">
+                Style
+              </h4>
+              <button class="services__list-item-btn">
+                <div class="services__list-item-btn-down-arrow">
+                </div>
+              </button>
+            </div>
+            <div class="services__list-item-lower">
+              <a class="services__list-item-link" href="#">
+                Explore
+              </a>
+              <p class="services__list-item-text">
+                The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+                Sections
+                1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are reproduced Рunk of
+              </p>
+            </div>
+          </li>
+        </ul>
+      </div>
     </div>
   </section>
   <section class="team">
@@ -275,22 +273,24 @@
               Adam Raymond
             </h3>
             <p class="team__person-text">
-              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
+              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+              Sections
               1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by
             </p>
             <ul class="socials">
               <li class="socials__item">
                 <a class="socials__link socials__link--1" href="https://www.facebook.com/" target="_blank"
-                  rel="noopener">
+                  rel="noopener" aria-label="Person's social media item 1">
                 </a>
               </li>
               <li class="socials__item">
-                <a class="socials__link socials__link--2" href="https://twitter.com/" target="_blank" rel="noopener">
+                <a class="socials__link socials__link--2" href="https://twitter.com/" target="_blank" rel="noopener"
+                  aria-label="Person's social media item 2">
                 </a>
               </li>
               <li class="socials__item">
                 <a class="socials__link socials__link--3" href="https://www.instagram.com/" target="_blank"
-                  rel="noopener">
+                  rel="noopener" aria-label="Person's social media item 3">
                 </a>
               </li>
             </ul>
@@ -305,22 +305,24 @@
               Adam Raymond
             </h3>
             <p class="team__person-text">
-              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
+              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+              Sections
               1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by
             </p>
             <ul class="socials">
               <li class="socials__item">
                 <a class="socials__link socials__link--1" href="https://www.facebook.com/" target="_blank"
-                  rel="noopener">
+                  rel="noopener" aria-label="Person's social media item 1">
                 </a>
               </li>
               <li class="socials__item">
-                <a class="socials__link socials__link--2" href="https://twitter.com/" target="_blank" rel="noopener">
+                <a class="socials__link socials__link--2" href="https://twitter.com/" target="_blank" rel="noopener"
+                  aria-label="Person's social media item 2">
                 </a>
               </li>
               <li class="socials__item">
                 <a class="socials__link socials__link--3" href="https://www.instagram.com/" target="_blank"
-                  rel="noopener">
+                  rel="noopener" aria-label="Person's social media item 3">
                 </a>
               </li>
             </ul>
@@ -337,22 +339,24 @@
               Adam Raymond
             </h3>
             <p class="team__person-text">
-              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
+              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+              Sections
               1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by
             </p>
             <ul class="socials">
               <li class="socials__item">
                 <a class="socials__link socials__link--1" href="https://www.facebook.com/" target="_blank"
-                  rel="noopener">
+                  rel="noopener" aria-label="Person's social media item 1">
                 </a>
               </li>
               <li class="socials__item">
-                <a class="socials__link socials__link--2" href="https://twitter.com/" target="_blank" rel="noopener">
+                <a class="socials__link socials__link--2" href="https://twitter.com/" target="_blank" rel="noopener"
+                  aria-label="Person's social media item 2">
                 </a>
               </li>
               <li class="socials__item">
                 <a class="socials__link socials__link--3" href="https://www.instagram.com/" target="_blank"
-                  rel="noopener">
+                  rel="noopener" aria-label="Person's social media item 3">
                 </a>
               </li>
             </ul>
@@ -367,22 +371,24 @@
               Adam Raymond
             </h3>
             <p class="team__person-text">
-              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections
+              The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.
+              Sections
               1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by
             </p>
             <ul class="socials">
               <li class="socials__item">
                 <a class="socials__link socials__link--1" href="https://www.facebook.com/" target="_blank"
-                  rel="noopener">
+                  rel="noopener" aria-label="Person's social media item 1">
                 </a>
               </li>
               <li class="socials__item">
-                <a class="socials__link socials__link--2" href="https://twitter.com/" target="_blank" rel="noopener">
+                <a class="socials__link socials__link--2" href="https://twitter.com/" target="_blank" rel="noopener"
+                  aria-label="Person's social media item 2">
                 </a>
               </li>
               <li class="socials__item">
                 <a class="socials__link socials__link--3" href="https://www.instagram.com/" target="_blank"
-                  rel="noopener">
+                  rel="noopener" aria-label="Person's social media item 3">
                 </a>
               </li>
             </ul>
@@ -394,7 +400,6 @@
       </div>
     </div>
   </section>
-
   <section class="brands">
     <div class="brands__container container">
       <ul class="brands__list">
@@ -418,11 +423,11 @@
     </div>
   </section>
   <footer class="footer">
-    <a class="footer__logo" href="/">
+    <a class="footer__logo" href="/" aria-label="Footer logo">
       <img class="footer__logo-link" src="../../images/general.imgs/logo-black.png" alt="logo">
     </a>
     <p class="footer__rights">
-      © Sentro 2021 <br>
+      &copy; Sentro 2021 <br>
       All Rights Resevered
     </p>
     <ul class="footer__menu footer__menu--secondary">
@@ -492,15 +497,18 @@
     </ul>
     <ul class="socials">
       <li class="socials__item">
-        <a class="socials__link socials__link--1" href="https://www.facebook.com/" target="_blank" rel="noopener">
+        <a class="socials__link socials__link--1" href="https://www.facebook.com/" target="_blank" rel="noopener"
+          aria-label="Social media item 1">
         </a>
       </li>
       <li class="socials__item">
-        <a class="socials__link socials__link--2" href="https://twitter.com/" target="_blank" rel="noopener">
+        <a class="socials__link socials__link--2" href="https://twitter.com/" target="_blank" rel="noopener"
+          aria-label="Social media item 2">
         </a>
       </li>
       <li class="socials__item">
-        <a class="socials__link socials__link--3" href="https://www.instagram.com/" target="_blank" rel="noopener">
+        <a class="socials__link socials__link--3" href="https://www.instagram.com/" target="_blank" rel="noopener"
+          aria-label="Social media item 3">
         </a>
       </li>
     </ul>
