--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Dmitry Voskoboev">
   <meta name="description" content="Design bureau renders excluesive full cycle design services">
-  <meta name="keywords"
-    content="design, exterior, interior, bureau, firm, exterior, interior, architecture, furniture, buildings">
+  <meta name="keywords" content="design, exterior, interior, bureau, firm, architecture, furniture, buildings">
   <!-- og -->
   <meta property="og:url" content="https://benhome.netlify.app/__/contact/contact.html">
   <meta property="og:type" content="website">
@@ -34,7 +33,7 @@
     <div class="header__upper">
       <button class="header__mobile-btn--open">
       </button>
-      <a class="header__logo" href="/">
+      <a class="header__logo" href="/" aria-label="Header logo">
         <img class="header__logo-benhome" src="../../images/general.imgs/logo-black.png" alt="logo-white">
       </a>
       <nav class="header__nav">
@@ -70,7 +69,7 @@
       </nav>
       <div class="header__call">
         <p class="header__call-text">
-          CALL US:
+          Call us:
         </p>
         <a class="header__call-link" href="tel:+19226279252">
           +1 (922) 627-92-52
@@ -112,7 +111,7 @@
           <span class="contacts__email-text">
             Email:
           </span>
-          <a class="contacts__email-link" type="mailto:info@benhouse.co" href="#">
+          <a class="contacts__email-link" type="mailto:info@benhome.co" href="#">
             info@benhouse.co
           </a>
         </div>
@@ -160,21 +159,24 @@
           </span>
         </p>
         <form class="contacts__form" action="#">
-          <input class="contacts__input contacts__input--name" type="text" placeholder="Name *" required>
-          <input class="contacts__input contacts__input--email" type="email" placeholder="Email *" required>
+          <input class="contacts__input contacts__input--name" type="text" placeholder="Name *" required
+            aria-label="Name input field">
+          <input class="contacts__input contacts__input--email" type="email" placeholder="Email *" required
+            aria-label="Text input field">
           <textarea name="textarea" class="contacts__input contacts__input--textarea" placeholder="Message *"
             required></textarea>
-          <input class="contacts__input contacts__input--btn" type="submit" value="Learn more">
+          <input class="contacts__input contacts__input--btn" type="submit" value="Learn more"
+            aria-label="Submit form button">
         </form>
       </div>
     </div>
   </section>
   <footer class="footer">
-    <a class="footer__logo" href="/">
+    <a class="footer__logo" href="/" aria-label="Footer logo">
       <img class="footer__logo-link" src="../../images/general.imgs/logo-black.png" alt="logo">
     </a>
     <p class="footer__rights">
-      © Sentro 2021 <br>
+      &copy; Sentro 2021 <br>
       All Rights Resevered
     </p>
     <ul class="footer__menu footer__menu--secondary">
@@ -244,15 +246,18 @@
     </ul>
     <ul class="socials">
       <li class="socials__item">
-        <a class="socials__link socials__link--1" href="https://www.facebook.com/" target="_blank" rel="noopener">
+        <a class="socials__link socials__link--1" href="https://www.facebook.com/" target="_blank" rel="noopener"
+          aria-label="Social media item 1">
         </a>
       </li>
       <li class="socials__item">
-        <a class="socials__link socials__link--2" href="https://twitter.com/" target="_blank" rel="noopener">
+        <a class="socials__link socials__link--2" href="https://twitter.com/" target="_blank" rel="noopener"
+          aria-label="Social media item 2">
         </a>
       </li>
       <li class="socials__item">
-        <a class="socials__link socials__link--3" href="https://www.instagram.com/" target="_blank" rel="noopener">
+        <a class="socials__link socials__link--3" href="https://www.instagram.com/" target="_blank" rel="noopener"
+          aria-label="Social media item 3">
         </a>
       </li>
     </ul>
