--- a/src/pages/portfolio/portfolio.html
+++ b/src/pages/portfolio/portfolio.html
@@ -7,8 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Dmitry Voskoboev">
   <meta name="description" content="Design bureau renders excluesive full cycle design services">
-  <meta name="keywords"
-    content="design, exterior, interior, bureau, firm, exterior, interior, architecture, furniture, buildings">
+  <meta name="keywords" content="design, exterior, interior, bureau, firm, architecture, furniture, buildings">
   <!-- og -->
   <meta property="og:url" content="https://benhome.netlify.app/__/portfolio/portfolio.html">
   <meta property="og:type" content="website">
@@ -22,17 +21,19 @@
   <link rel="preload" href="../../fonts/SFProDisplay-Semibold.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="../../fonts/SFProDisplay-Bold.woff2" as="font" type="font/woff2" crossorigin>
   <!-- /fonts preload -->
-  <title>Benhome: projects</title>
+  <title>Benhome: Portfolio</title>
   <link rel="stylesheet" href="./portfolio.scss">
   <script src="./portfolio.js" defer></script>
 </head>
 
 <body>
+  <div class="btn-to-top">
+  </div>
   <header class="header">
     <div class="header__upper">
       <button class="header__mobile-btn--open">
       </button>
-      <a class="header__logo" href="/">
+      <a class="header__logo" href="/" aria-label="Header logo">
         <img class="header__logo-benhome" src="../../images/general.imgs/logo-black.png" alt="logo-white">
       </a>
       <nav class="header__nav">
@@ -60,7 +61,7 @@
             </a>
           </li>
           <li class="header__menu-item">
-            <a class="header__menu-item-link" href="../portfolio/portfolio.html">
+            <a class="header__menu-item-link" href="../contact/contact.html">
               Contact
             </a>
           </li>
@@ -113,7 +114,7 @@
             English
             14 translation by H. Rackham.
           </p>
-          <a href="#" class="card__link projects__card-link">
+          <a class="card__link projects__card-link" href="#" aria-label="Project card link 1">
           </a>
         </div>
       </div>
@@ -132,7 +133,7 @@
             English
             14 translation by H. Rackham.
           </p>
-          <a href="#" class="card__link projects__card-link">
+          <a class="card__link projects__card-link" href="#" aria-label="Project card link 2">
           </a>
         </div>
       </div>
@@ -151,7 +152,7 @@
             English
             14 translation by H. Rackham.
           </p>
-          <a href="#" class="card__link projects__card-link">
+          <a class="card__link projects__card-link" href="#" aria-label="Project card link 3">
           </a>
         </div>
       </div>
@@ -170,7 +171,7 @@
             English
             14 translation by H. Rackham.
           </p>
-          <a href="#" class="card__link projects__card-link">
+          <a class="card__link projects__card-link" href="#" aria-label="Project card link 4">
           </a>
         </div>
       </div>
@@ -189,7 +190,7 @@
             English
             14 translation by H. Rackham.
           </p>
-          <a href="#" class="card__link projects__card-link">
+          <a class="card__link projects__card-link" href="#" aria-label="Project card link 5">
           </a>
         </div>
       </div>
@@ -208,7 +209,7 @@
             English
             14 translation by H. Rackham.
           </p>
-          <a href="#" class="card__link projects__card-link">
+          <a class="card__link projects__card-link" href="#" aria-label="Project card link 6">
           </a>
         </div>
       </div>
@@ -227,7 +228,7 @@
             English
             14 translation by H. Rackham.
           </p>
-          <a href="#" class="card__link projects__card-link">
+          <a class="card__link projects__card-link" href="#" aria-label="Project card link 7">
           </a>
         </div>
       </div>
@@ -246,7 +247,7 @@
             English
             14 translation by H. Rackham.
           </p>
-          <a href="#" class="card__link projects__card-link">
+          <a class="card__link projects__card-link" href="#" aria-label="Project card link 8">
           </a>
         </div>
       </div>
@@ -265,18 +266,18 @@
             English
             14 translation by H. Rackham.
           </p>
-          <a href="#" class="card__link projects__card-link">
+          <a class="card__link projects__card-link" href="#" aria-label="Project card link 9">
           </a>
         </div>
       </div>
     </div>
   </section>
   <footer class="footer">
-    <a class="footer__logo" href="/">
+    <a class="footer__logo" href="/" aria-label="Footer logo">
       <img class="footer__logo-link" src="../../images/general.imgs/logo-black.png" alt="logo">
     </a>
     <p class="footer__rights">
-      © Sentro 2021 <br>
+      &copy; Sentro 2021 <br>
       All Rights Resevered
     </p>
     <ul class="footer__menu footer__menu--secondary">
@@ -346,15 +347,18 @@
     </ul>
     <ul class="socials">
       <li class="socials__item">
-        <a class="socials__link socials__link--1" href="https://www.facebook.com/" target="_blank" rel="noopener">
+        <a class="socials__link socials__link--1" href="https://www.facebook.com/" target="_blank" rel="noopener"
+          aria-label="Social media item 1">
         </a>
       </li>
       <li class="socials__item">
-        <a class="socials__link socials__link--2" href="https://twitter.com/" target="_blank" rel="noopener">
+        <a class="socials__link socials__link--2" href="https://twitter.com/" target="_blank" rel="noopener"
+          aria-label="Social media item 2">
         </a>
       </li>
       <li class="socials__item">
-        <a class="socials__link socials__link--3" href="https://www.instagram.com/" target="_blank" rel="noopener">
+        <a class="socials__link socials__link--3" href="https://www.instagram.com/" target="_blank" rel="noopener"
+          aria-label="Social media item 3">
         </a>
       </li>
     </ul>
